rebuild client